scenarios/ciliumfhir/policies/allowvader-coruscanthealth.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "fhirpatient"
spec:
  description: "L7 policy to restrict access to specific HTTP call"
  endpointSelector:
    matchLabels:
      org: empire
        #class: deathstar
  ingress:
  - fromEndpoints:
    - matchLabels:
        org: empire 
    toPorts:
    - ports:
      - port: "52773"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/intersystems/fhir/r5/Patient/DarthVader"
