scenarios/ciliumfhir/policies/l7enable-coruscanthealth.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l7-coruscanthealth"
spec:
  endpointSelector:
    matchLabels: {}
  ingress:
  - fromEntities:
    - all
  - toPorts:
    - ports:
      - port: "52773"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/intersystems/fhir/r5/Patient/DarthVader"
